s3 done and offer backend done. a bit of integration done
