# backend/modules/Offer/api/offer.route.js
@@ -1,11 +1,14 @@
 
 const router=require('express').Router()
+const { ConfigureMulterStorageMultiple } = require('../../../config/uploadFile')
 const successMessages = require("../../../messages/successMessages")
 const PreProcessing = require("../../../middleware/Request/PreProcessing")("offer")
 const PreProcessingWithoutToken = require("../../../middleware/Request/PreProcessingWithoutToken")
 const PostErrorProcessing = require("../../../middleware/Response/PostErrorProcessing")
 const PostSuccessProcessing = require("../../../middleware/Response/PostSuccessProcessing")
-const { createOffer, editOffer, getOffer, getOffers, updateOffer, deleteOffer } = require("../controller/offer.controller")
+const EntityNames = require('../../../Types/EntityNames')
+const { UploadValidMimeTypes, UploadedFileTypes } = require('../../../Types/UploadFileTypes')
+const { createOffer, editOffer, getOffer, getOffers, updateOffer, deleteOffer, offerTemplate, uploadOfferImages } = require("../controller/offer.controller")
 //todo: add preprocessing later
 router.post("/create",PreProcessing,async (req, res) => {
     try{
@@ -27,7 +30,26 @@ router.post("/create",PreProcessing,async (req, res) => {
         res.status(statusCode).json(error);
     }
 });
-
+router.get("/template",PreProcessing,async (req, res) => {
+    try{
+        const offer = await offerTemplate(req.body, req.user.id,req.locale)
+        const popupMessage = successMessages()[req.locale].offer.createOffer
+        const response = PostSuccessProcessing(popupMessage, offer)
+        res.status(response.statusCode).json(response)
+    }catch(err){
+        console.log(err);
+        const statusCode = 401;
+        const error = PostErrorProcessing(
+            statusCode,
+            err.formErrors,
+            err.entityName,
+            err.service,
+            err.apiErrorCode,
+            req.locale
+        );
+        res.status(statusCode).json(error);
+    }
+});
 router.put("/edit/:offerId", PreProcessing,async (req, res) => {
     try{
         const offer = await editOffer(req.params.offerId,req.body, req.user.id, req.locale)
@@ -99,6 +121,28 @@ router.delete("/delete/:offerId",PreProcessing, async (req, res) => {
         const status=await deleteOffer(req.params.offerId, req.user.id, req.locale)
         const popupMessage = successMessages()[req.locale].offer.deleteOffer
         const response = PostSuccessProcessing(popupMessage, status)
+        res.status(response.statusCode).json(response)
+    }catch (err){
+        console.log(err);
+        const statusCode = 401;
+        const error = PostErrorProcessing(
+            statusCode,
+            err.formErrors,
+            err.entityName,
+            err.service,
+            err.apiErrorCode,
+            req.locale
+        );
+
+        res.status(statusCode).json(error);
+    }
+});
+
+router.put("/upload/images/:offerId",PreProcessing, ConfigureMulterStorageMultiple(UploadValidMimeTypes.IMAGES, UploadedFileTypes.IMAGE, EntityNames.offer, "images", 5), async (req, res) => {
+    try{
+        const files=await uploadOfferImages(req.locale, req.userId, req.params.offerId, req.files, EntityNames.offer, UploadedFileTypes.IMAGE)
+        const popupMessage = successMessages()[req.locale].offer.deleteOffer
+        const response = PostSuccessProcessing(popupMessage, files)
         res.status(response.statusCode).json(response)
     }catch (err){
         console.log(err);
