# backend/modules/Offer/controller/offer.controller.js
@@ -6,33 +6,22 @@ const checkForUnsupportedParameters = require("../../../utils/checkForUnsupporte
 const formErrorMessages = require("../../../messages/formErrorMessages")
 const EntityNames = require("../../../Types/EntityNames")
 const { storeSessionInRedis,setJson, getJson,deleteKey } = require("../../../utils/redis")
-const { formDataSchemaValidationErrorHandler } = require("../../../utils")
+const { formDataSchemaValidationErrorHandler, getS3Key } = require("../../../utils")
 const {OfferValidationSchema,EditOfferValidationSchema,OfferGetValidationSchema,} = require("../validation")
+const { PriceModeEnum, OfferTypeEnum, OfferCategoryEnum } = require('../../../Types/OfferTypeEnums')
+const offerResponseFormatter = require('../responseFormatter/offerResponseFormatter')
+const { uploadFileToS3 } = require('../../../config/s3')
 const createOffer = async (formData, userId, locale) => {
     console.log(locale)
     const id=uuidv4()
     const service = "createOffer"
     checkForUnsupportedParameters(Forms.offer.createOffer, formData, EntityNames.offer, service)
     formDataSchemaValidationErrorHandler(OfferValidationSchema, formData, formErrorMessages[locale].offer.createOffer, EntityNames.offer, service)
-    const {title,description,images,location,priceMode,price,startingPrice,availability,type,categories,estimatedTime,status}=formData
-    const offer = new Offer({
-        id,
-        owner:userId,
-        title,
-        description,
-        images:images || [],
-        location,
-        priceMode,
-        ...(priceMode === 'fixed' && price !== undefined && { price }),
-        ...(priceMode === 'negotiation' && startingPrice !== undefined && { startingPrice }),
-        availability:availability ?? true,
-        type,
-        categories:categories || [],
-        estimatedTime:estimatedTime,
-        status,
-    })
+
+    let offer = new Offer({...formData, id, owner: userId, categoryIds: formData.categoryIds})
     await offer.save()
     const redisKey = `offer:${id}`;
+    offer = await offerResponseFormatter(offer)
     await setJson(redisKey, offer, { EX: 3600 });
     return offer
 };
@@ -41,7 +30,6 @@ const editOffer = async (offerId,formData, userId, locale) => {
     const service = "editOffer"
     checkForUnsupportedParameters(Forms.offer.editOffer, formData, EntityNames.offer, service)
     formDataSchemaValidationErrorHandler(EditOfferValidationSchema, formData, formErrorMessages[locale].offer.editOffer, EntityNames.offer, service)
-    const {title,description,images,location,priceMode,price,startingPrice,availability,type,categories,estimatedTime,status}=formData
     if (!offerId) {
         throw {
             statusCode: 400,
@@ -63,10 +51,11 @@ const editOffer = async (offerId,formData, userId, locale) => {
             service,
         }
     }
-    await Offer.update({ id: offerId }, formData);
+    offer = await Offer.update({ id: offerId }, formData);
+    offer = await offerResponseFormatter(offer)
     const redisKey = `offer:${offerId}`;
-    await setJson(redisKey, formData, { EX: 3600 });
-    return formData
+    await setJson(redisKey, offer, { EX: 3600 });
+    return offer
 };
 
 const getOffer = async (offerId, userId, locale) => {
@@ -82,7 +71,7 @@ const getOffer = async (offerId, userId, locale) => {
     if(cachedOffer){
         return cachedOffer
     }
-    const offer=await Offer.get(offerId)
+    let offer=await Offer.get(offerId)
     if(!offer){
         throw {
             apiErrorCode: "offer.notFound",
@@ -90,6 +79,8 @@ const getOffer = async (offerId, userId, locale) => {
             service,
         }
     }
+
+    offer = await offerResponseFormatter(offer)
     await setJson(`offer:${offerId}`, offer, { EX: 3600 });
     return offer
 };
@@ -102,7 +93,8 @@ const getOffers = async (formData, userId, locale) => {
     if(cachedOffers){
         return cachedOffers
     }
-    const offers=await Offer.scan().exec();
+    let offers=await Offer.scan().exec();
+    offers = await offerResponseFormatter(offers)
     await setJson(redisKey, offers, { EX: 3600 });
     return offers
 };
@@ -125,9 +117,6 @@ const deleteOffer = async (offerId, userId, locale) => {
             service,
         }
     }
-    console.log(typeof offer.owner, typeof userId)
-    console.log(offer.owner, userId)
-    console.log(offer.owner !== userId)
     if(offer.owner !== userId){
         console.log(offer.owner, userId)
         throw {
@@ -138,8 +127,51 @@ const deleteOffer = async (offerId, userId, locale) => {
     }
     await Offer.delete({id:offerId})
     const redisKey = `offer:${offerId}`;
+    const redisKeyAll='offers:all';
+    await deleteKey(redisKeyAll)
     await deleteKey(redisKey);
     return {status: true}
 };
 
-module.exports = {createOffer, editOffer, getOffer, getOffers, deleteOffer}
+const offerTemplate = (locale) => {
+    PriceModeEnum
+    OfferTypeEnum
+    OfferCategoryEnum
+    const priceModes = PriceModeEnum.getAsArray()
+    const offerTypes = OfferTypeEnum.getAsArray()
+    const offerCategories = OfferCategoryEnum.getAsArray()
+    return {priceModes, offerTypes, offerCategories}
+
+}
+
+const uploadOfferImages = async (locale, userId, offerId, files, serviceName,  fileType) => {
+    let offer=await Offer.get(offerId)
+    console.log("offer是：",offer)
+    if(!Offer){
+        throw {
+            apiErrorCode: "offer.notFound",
+            entityName: EntityNames.offer,
+            service,
+        }
+    }
+    if(offer.owner !== userId){
+        console.log(offer.owner, userId)
+        throw {
+            apiErrorCode: "offer.notOwner",
+            entityName: EntityNames.offer,
+            service,
+        }
+    }
+    const urls = []
+    for (const file of files) {
+        const key = getS3Key(fileType, offer.id, serviceName, file.originalname)
+        const vfile = await uploadFileToS3(file.buffer, key)
+        urls.push(`http://${process.env.AWS_S3_BUCKET}.s3.localhost.localstack.cloud:4566/${key}`)
+    }
+    offer.imageUrls = urls
+    await offer.save()
+    offer = await offerResponseFormatter(offer)
+    await setJson(`offer:${offerId}`, offer, { EX: 3600 });
+    return offer
+}
+module.exports = {createOffer, editOffer, getOffer, getOffers, deleteOffer, offerTemplate, uploadOfferImages}
